libs/extractor/src/snapshots/extractor__tests__support_transpile_mjs-8.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\n        import { Box as o } from \"@devup-ui/core\";\n        e(o, { as: b ? null : undefined, className: \"a\", bg: variable, style: { color: \"blue\" }, props: { animate: { duration: 1 } } })\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "variable",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\nimport { jsx as e } from \"react/jsx-runtime\";\n((__devupSpread1, __devupAssignment158, __devupSpread0) => e(__devupSpread1, {\n\tclassName: `a ${__devupAssignment158?.[0] ?? \"\"}`,\n\tstyle: {\n\t\t...{ ...__devupAssignment158?.[1] },\n\t\t...__devupSpread0\n\t},\n\t...{ animate: { duration: 1 } }\n}))((b ? null : undefined) || \"div\", ((__devupValue) => [\n\t__devupValue !== null && __devupValue !== void 0 && typeof __devupValue !== \"boolean\" && __devupValue !== \"\" && (typeof __devupValue !== \"number\" || __devupValue === __devupValue && __devupValue !== 1 / 0 && __devupValue !== -(1 / 0)) ? \"OHaeb6cytsthp97blx\" : \"\",\n\t{ \"---SUHbsn6x175dxxb07vg-du\": ((__devupNumber)=>typeof __devupNumber===\"number\"?+__devupNumber*4+\"px\":typeof __devupNumber===\"string\"&&/^(?:[+-]?(?:(?:[0-9]+(?:\\.[0-9]*)?|\\.[0-9]+)(?:[eE][+-]?[0-9]+)?|inf(?:inity)?|nan))$(?![\\s\\S])/i.test(__devupNumber)?+__devupNumber*4+\"px\":__devupNumber)(__devupValue) },\n\t__devupValue\n])(variable), { color: \"blue\" });\n",
}
