libs/extractor/src/snapshots/extractor__tests__tailwind_full_integration.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"components/Card.tsx\",\nr#\"import {Box, Flex, Text} from '@devup-ui/core'\n\n// Card component with comprehensive Tailwind usage\nexport const Card = () => (\n  <Box className=\"bg-white rounded-lg shadow-md p-6 hover:shadow-xl transition-shadow dark:bg-gray-800\">\n    <Flex className=\"flex-col gap-4 sm:flex-row sm:items-center\">\n      <Box className=\"w-12 h-12 rounded-full bg-blue-500 flex items-center justify-center\">\n        <Text className=\"text-white font-bold text-lg\">A</Text>\n      </Box>\n      <Box className=\"flex-1\">\n        <Text className=\"text-gray-900 font-semibold text-xl dark:text-white\">Title</Text>\n        <Text className=\"text-gray-500 text-sm mt-1 dark:text-gray-400\">Subtitle</Text>\n      </Box>\n    </Flex>\n    <Box className=\"mt-4 pt-4 border-t border-gray-200 dark:border-gray-700\">\n      <Text className=\"text-gray-700 leading-relaxed dark:text-gray-300\">\n        Content goes here with multiple Tailwind utilities combined.\n      </Text>\n    </Box>\n  </Box>\n)\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--tw-leading",
                value: "1.625",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "align-items",
                value: "center",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "align-items",
                value: "center",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "#1F2937",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "#3B82F6",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "#FFF",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border-color",
                value: "#374151",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border-color",
                value: "#E5E7EB",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border-radius",
                value: ".5rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border-radius",
                value: "9999px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "box-shadow",
                value: "0 20px 25px -5px rgb(0 0 0 / .1),0 8px 10px -6px rgb(0 0 0 / .1)",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(hover:hover)",
                        selector: Some(
                            "&:hover",
                        ),
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "box-shadow",
                value: "0 4px 6px -1px rgb(0 0 0 / .1),0 2px 4px -2px rgb(0 0 0 / .1)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#111827",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#374151",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#6B7280",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#9CA3AF",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#D1D5DB",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#FFF",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#FFF",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "flex",
                value: "1 1 0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "flex-direction",
                value: "column",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "flex-direction",
                value: "row",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: ".875rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "1.125rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "1.25rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-weight",
                value: "600",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-weight",
                value: "700",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "1rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "3rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "justify-content",
                value: "center",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "line-height",
                value: "1.625",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "line-height",
                value: "var(--tw-leading,calc(1.25 / .875))",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "line-height",
                value: "var(--tw-leading,calc(1.75 / 1.125))",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "line-height",
                value: "var(--tw-leading,calc(1.75 / 1.25))",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: ".25rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "1rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "1.5rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-top",
                value: "1rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "transition-property",
                value: "box-shadow",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "3rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                css: "@property --tw-translate-x{syntax:\"*\";inherits:false;initial-value:0}@property --tw-translate-y{syntax:\"*\";inherits:false;initial-value:0}@property --tw-scale-x{syntax:\"*\";inherits:false;initial-value:1}@property --tw-scale-y{syntax:\"*\";inherits:false;initial-value:1}@property --tw-scale-z{syntax:\"*\";inherits:false;initial-value:1}@property --tw-rotate-x{syntax:\"*\";inherits:false}@property --tw-rotate-y{syntax:\"*\";inherits:false}@property --tw-rotate-z{syntax:\"*\";inherits:false}@property --tw-skew-x{syntax:\"*\";inherits:false}@property --tw-skew-y{syntax:\"*\";inherits:false}@property --tw-leading{syntax:\"*\";inherits:false}@property --tw-content{syntax:\"*\";inherits:false;initial-value:\"\"}@property --tw-scroll-snap-strictness{syntax:\"*\";inherits:false;initial-value:proximity}",
                file: "@devup-ui/tailwind",
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n// Card component with comprehensive Tailwind usage\nexport const Card = () => <div className=\"OHa27vz2igz6c7klbx OHbr3hxvk3k14ogtk3 OHc9gnal1bmpqvou03 OLpadding-v1_p5rem OHc25lftmk8zmxz7a3 OHa7a9qfiyswj5xvyi OHaadkd3fjvm0ncn61\">\n    <div className=\"OHdqqucorwlkl9_w4h OLgap-v1rem OHcbii5pbpghc_fo_l OHakccef9adk46p93g OLdisplay-vflex-o0\">\n      <div className=\"OLwidth-v3rem OLheight-v3rem OHa4wq3rqwuiq0rksj OHa6zdaj9656pczqmg OLdisplay-vflex OHcv8oijaub8u8k_sq OHaga_jklffbvfug08\">\n        <span className=\"OHc3oqq9xzpql0nn4e OHdg7ch0hkyvuin4uo OHbxlsdadakndari3k OHc4rs765sfluze7nw\">A</span>\n      </div>\n      <div className=\"OLflex-v1_s1_s0\">\n        <span className=\"OLcolor-v_h111827 OHap2d0xtugbsi2bif OHdu1x_fd3_zyoqf4_ OHa4eoarosh01o9d2g OHbsqy5jjsn3ni4yya\">Title</span>\n        <span className=\"OHa3bzu4blmqn0r9xi OHcajqalo_p20xmjh8 OHbkdbnvb9xhfqwzek OHct77ucd4xjs8btbi OHcb9b6jr78lksnroh\">Subtitle</span>\n      </div>\n    </div>\n    <div className=\"OHdt14ba2xfy0fpkw6 OHcg1arnnmrpe6xko6 border-t OHcukebo3hq8a4ffnj OHctawh2276upcmkdl\">\n      <span className=\"OLcolor-v_h374151 OHdghx6t2_gyv40hy3 OHc4rg4fildl4ns27w OHcdxneel4qs6hijo_\">\n        Content goes here with multiple Tailwind utilities combined.\n      </span>\n    </div>\n  </div>;\n",
}
